--- a/Styles/gama.css
+++ b/Styles/gama.css
@@ -30,11 +30,6 @@ h3 {
     font-size: 20px;
 }
 
-.image-container {
-    position: static;
-
-}
-
 .overlap-text {
     text-align: center;
     color: var(--darkColour);
@@ -52,6 +47,7 @@ h3 {
     position: relative;
     background-position: center;
     background-size: cover;
+    overflow: auto;
     opacity: 0.9;
     background-repeat: no-repeat;
     z-index: -1;
