--- a/Styles/gama.css
+++ b/Styles/gama.css
@@ -23,6 +23,8 @@ h1, h2 {
     font-family: superFamicomFont, Georgia, 'Times New Roman', Times, serif;
     text-align: center;
     display: inline;
+    font-size: min(4vw, 50px);
+    text-shadow: 5px 3px 3px var(--lightColour)
 }
 
 h3 {
@@ -30,15 +32,22 @@ h3 {
     font-size: 20px;
 }
 
-.overlap-text {
+.overlap-text, .overlap-text-right, .overlap-text-left {
     text-align: center;
     color: var(--darkColour);
     position: absolute;
-    bottom: 50%;
-    right: 10%;
+    top: 20%;
     background-color: var(--midColour);
     padding: 1.5em;
-    max-width: 40%;
+    max-width: 45%;
+}
+
+.overlap-text, .overlap-text-right {
+    right: 10%;
+}
+
+.overlap-text-left {
+    left: 10%;
 }
 
 .parallax {
@@ -60,7 +69,7 @@ h3 {
 }
 
 .section-breaker {
-    height: 30px;
+    height: 0px;
     background-color: var(--lightColour);
 }
 
@@ -72,6 +81,7 @@ h3 {
     font-style: italic;
     text-align: center;
     font-size: 12px;
+    text-shadow: 0px 0px 5px white;
 }
 
 #navBar {
