--- a/Styles/gama.css
+++ b/Styles/gama.css
@@ -33,6 +33,10 @@ h3 {
     font-size: 1.5vw;
 }
 
+a.wood-link:hover {
+    text-decoration: none;
+}
+
 ul.dotless {
     list-style: none;
     padding-left: 0;
@@ -58,7 +62,7 @@ ul.dotless {
     text-align: center;
 }
 
-.gallery-img, .gallery-img > img {
+.gallery-img, .gallery-img > img, .wood-link img {
     max-width: 95%;
     max-height: 40vw;
     display: inline-block;
@@ -152,6 +156,10 @@ ul.dotless {
     text-shadow: 0px 0px 5px white;
 }
 
+.wood-link img {
+    height: 7vw;
+}
+
 #clouds {
     min-height: 10vw;
     max-height: 100vw;
@@ -197,6 +205,7 @@ ul.dotless {
 
 #topNav {
     display: center;
+    border-bottom: 1px solid var(--midHighlight);
 }
 
 #wood00, #wood03, #wood05, #wood09, #wood12 {
@@ -219,12 +228,12 @@ ul.dotless {
     z-index: 2.1;
 }
 
-#wood08, #wood15 {
+#wood08 {
     height: initial;
     z-index: 3.2;
 }
 
-#wood07 {
+#wood07, #wood15  {
     height: 30vw;
     z-index: 2.7;
 }
@@ -234,7 +243,7 @@ ul.dotless {
     z-index: 2;
 }
 
-#wood14 {
+#wood14, #wood16 {
     height: 20vw;
     z-index: 2.5;
 }
